Update POC with an example CD event
