# examples/go/model_cd_buildstarted_custom_data.go
@@ -1,0 +1,148 @@
+/*
+Secure Build API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// CdBuildstartedCustomData - struct for CdBuildstartedCustomData
+type CdBuildstartedCustomData struct {
+	MapmapOfStringinterface{} *map[string]interface{}
+	String *string
+}
+
+// map[string]interface{}AsCdBuildstartedCustomData is a convenience function that returns map[string]interface{} wrapped in CdBuildstartedCustomData
+func MapmapOfStringinterface{}AsCdBuildstartedCustomData(v *map[string]interface{}) CdBuildstartedCustomData {
+	return CdBuildstartedCustomData{
+		MapmapOfStringinterface{}: v,
+	}
+}
+
+// stringAsCdBuildstartedCustomData is a convenience function that returns string wrapped in CdBuildstartedCustomData
+func StringAsCdBuildstartedCustomData(v *string) CdBuildstartedCustomData {
+	return CdBuildstartedCustomData{
+		String: v,
+	}
+}
+
+
+// Unmarshal JSON data into one of the pointers in the struct
+func (dst *CdBuildstartedCustomData) UnmarshalJSON(data []byte) error {
+	var err error
+	match := 0
+	// try to unmarshal data into MapmapOfStringinterface{}
+	err = newStrictDecoder(data).Decode(&dst.MapmapOfStringinterface{})
+	if err == nil {
+		jsonMapmapOfStringinterface{}, _ := json.Marshal(dst.MapmapOfStringinterface{})
+		if string(jsonMapmapOfStringinterface{}) == "{}" { // empty struct
+			dst.MapmapOfStringinterface{} = nil
+		} else {
+			match++
+		}
+	} else {
+		dst.MapmapOfStringinterface{} = nil
+	}
+
+	// try to unmarshal data into String
+	err = newStrictDecoder(data).Decode(&dst.String)
+	if err == nil {
+		jsonString, _ := json.Marshal(dst.String)
+		if string(jsonString) == "{}" { // empty struct
+			dst.String = nil
+		} else {
+			match++
+		}
+	} else {
+		dst.String = nil
+	}
+
+	if match > 1 { // more than 1 match
+		// reset to nil
+		dst.MapmapOfStringinterface{} = nil
+		dst.String = nil
+
+		return fmt.Errorf("data matches more than one schema in oneOf(CdBuildstartedCustomData)")
+	} else if match == 1 {
+		return nil // exactly one match
+	} else { // no match
+		return fmt.Errorf("data failed to match schemas in oneOf(CdBuildstartedCustomData)")
+	}
+}
+
+// Marshal data from the first non-nil pointers in the struct to JSON
+func (src CdBuildstartedCustomData) MarshalJSON() ([]byte, error) {
+	if src.MapmapOfStringinterface{} != nil {
+		return json.Marshal(&src.MapmapOfStringinterface{})
+	}
+
+	if src.String != nil {
+		return json.Marshal(&src.String)
+	}
+
+	return nil, nil // no data in oneOf schemas
+}
+
+// Get the actual instance
+func (obj *CdBuildstartedCustomData) GetActualInstance() (interface{}) {
+	if obj == nil {
+		return nil
+	}
+	if obj.MapmapOfStringinterface{} != nil {
+		return obj.MapmapOfStringinterface{}
+	}
+
+	if obj.String != nil {
+		return obj.String
+	}
+
+	// all schemas are nil
+	return nil
+}
+
+type NullableCdBuildstartedCustomData struct {
+	value *CdBuildstartedCustomData
+	isSet bool
+}
+
+func (v NullableCdBuildstartedCustomData) Get() *CdBuildstartedCustomData {
+	return v.value
+}
+
+func (v *NullableCdBuildstartedCustomData) Set(val *CdBuildstartedCustomData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCdBuildstartedCustomData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCdBuildstartedCustomData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCdBuildstartedCustomData(val *CdBuildstartedCustomData) *NullableCdBuildstartedCustomData {
+	return &NullableCdBuildstartedCustomData{value: val, isSet: true}
+}
+
+func (v NullableCdBuildstartedCustomData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCdBuildstartedCustomData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
