# examples/rust/src/models/cd_buildstarted_custom_data.rs
@@ -1,0 +1,25 @@
+/*
+ * Secure Build API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct CdBuildstartedCustomData {
+}
+
+impl CdBuildstartedCustomData {
+    pub fn new() -> CdBuildstartedCustomData {
+        CdBuildstartedCustomData {
+        }
+    }
+}
+
+
