# examples/rust/src/models/mod.rs
@@ -8,6 +8,14 @@ pub mod build_output_manifest;
 pub use self::build_output_manifest::BuildOutputManifest;
 pub mod build_status;
 pub use self::build_status::BuildStatus;
+pub mod cd_buildstarted;
+pub use self::cd_buildstarted::CdBuildstarted;
+pub mod cd_buildstarted_context;
+pub use self::cd_buildstarted_context::CdBuildstartedContext;
+pub mod cd_buildstarted_custom_data;
+pub use self::cd_buildstarted_custom_data::CdBuildstartedCustomData;
+pub mod cd_buildstarted_subject;
+pub use self::cd_buildstarted_subject::CdBuildstartedSubject;
 pub mod git_ref;
 pub use self::git_ref::GitRef;
 pub mod slsa_provenance_v01;
